--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@bootpay/server-rest-client",
-  "version": "1.0.8",
-  "description": "Bootpay Server Rest Client Javasrcipt Library",
+  "name": "@bootpay/backend-nodejs",
+  "version": "1.0.0",
+  "description": "Bootpay Server Side Package for Node.js",
   "main": "dist/bootpay.js",
   "types": "dist/bootpay.d.ts",
   "scripts": {
@@ -13,12 +13,12 @@
     "axios": "^0.21.1"
   },
   "devDependencies": {
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bootpay/server_nodejs"
+    "url": "git+https://github.com/bootpay/backend-nodejs"
   },
   "keywords": [
     "결제",
@@ -32,7 +32,7 @@
   "author": "Bootpay",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bootpay/server_nodejs/issues"
+    "url": "https://bootpay.channel.io/"
   },
-  "homepage": "https://docs.bootpay.co.kr"
+  "homepage": "https://www.bootpay.co.kr"
 }
