--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "lib": [
-      "es6"
+      "es6",
+      "DOM"
     ],
     "module": "commonjs",
     "moduleResolution": "node",
