--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bootpay-backend-nodejs",
+  "name": "@bootpay/backend-js",
   "version": "2.0.0",
   "description": "Bootpay Server Side Package for Node.js",
   "main": "dist/bootpay.js",
