--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bootpay/backend-js",
-  "version": "2.0.0-beta.3",
+  "version": "2.0.0",
   "description": "Bootpay Server Side Package for Node.js",
   "main": "dist/bootpay.js",
   "types": "dist/bootpay.d.ts",
