--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "devDependencies": {
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.7.4",
+    "@types/node": "^18.6.2"
   },
   "repository": {
     "type": "git",
