--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,16 @@
   "compilerOptions": {
     "target": "es6",
     "lib": [
-      "es6",
+      "esnext",
       "DOM"
     ],
     "module": "commonjs",
     "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "declaration": true,
     "outDir": "./dist",
-    "strict": true,
-    "baseUrl": "./src",
+    "baseUrl": "./src/",
     "paths": {
       "*": [
         "../node_modules/*",
@@ -18,6 +19,9 @@
       ]
     }
   },
+  "include": [
+    "src/*"
+  ],
   "exclude": [
     "**/*.spec.ts",
     "node_modules",
