--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@bootpay/backend-js",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "description": "Bootpay Server Side Package for Node.js",
   "main": "dist/bootpay.js",
   "types": "dist/bootpay.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf ./dist && tsc --build && cp ./package.json dist/package.json && cp ./src/index.js ./dist/index.js && rm -rf ./dist/src && cp ./README.md dist/",
+    "build": "rm -rf ./dist && tsc --build && cp ./package.json dist/package.json &&  rm -rf ./dist/src && cp ./README.md dist/",
     "clear": "tsc --build --clean"
   },
   "dependencies": {
