--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "declaration": true,
+    "allowJs": true,
     "outDir": "./dist",
     "baseUrl": "./src/",
     "paths": {
