--- a/package.json
+++ b/package.json
@@ -3,18 +3,27 @@
   "version": "2.1.9",
   "description": "Bootpay Server Side Package for Node.js",
   "types": "dist/bootpay.d.ts",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/lib/request.d.ts"
+    }
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf ./dist && tsc --build && cp ./package.json dist/package.json &&  rm -rf ./dist/src && cp ./README.md dist/",
+    "build": "rm -rf ./dist && tsc --p ./tsconfig.json && cp ./package.json dist/package.json &&  rm -rf ./dist/src && cp ./README.md dist/",
     "clear": "tsc --build --clean"
   },
   "dependencies": {
-    "axios": "^0.26.1"
+    "axios": "^1.6.2",
+    "@types/axios": "^0.14.0"
   },
   "devDependencies": {
     "ts-node": "^10.7.0",
-    "typescript": "^4.7.4",
+    "typescript": "^5.3.3",
     "@types/node": "^18.6.2"
   },
   "repository": {
