--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "2.2.0",
   "description": "Bootpay Server Side Package for Node.js",
   "types": "dist/bootpay.d.ts",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./index.js",
+  "module": "./index.js",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/lib/request.d.ts"
+      "import": "./index.js",
+      "require": "./index.js",
+      "types": "./lib/request.d.ts"
     }
   },
   "scripts": {
@@ -18,8 +18,7 @@
     "clear": "tsc --build --clean"
   },
   "dependencies": {
-    "axios": "^1.6.2",
-    "@types/axios": "^0.14.0"
+    "axios": "^1.6.2"
   },
   "devDependencies": {
     "ts-node": "^10.7.0",
@@ -39,6 +38,9 @@
     "부트페이",
     "bootpay"
   ],
+  "ts-node": {
+    "esm": true
+  },
   "author": "Bootpay",
   "license": "MIT",
   "bugs": {
