--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bootpay/backend",
-  "version": "2.2.0-beta.1",
+  "version": "2.2.0",
   "description": "Bootpay Server Side Package for Node.js",
   "types": "dist/bootpay.d.ts",
   "main": "dist/bootpay.js",
