--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "node16",
+    "target": "es6",
+    "module": "commonjs",
+    "moduleResolution": "node",
     "declarationMap": false,
     "sourceMap": false,
     "forceConsistentCasingInFileNames": true,
@@ -14,7 +15,6 @@
     "typeRoots": [
       "./src/lib"
     ],
-    "moduleResolution": "node16",
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "declaration": true,
