--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bootpay/backend-js",
-  "version": "2.1.10-beta3",
+  "version": "2.1.10",
   "description": "Bootpay Server Side Package for Node.js",
   "types": "dist/bootpay.d.ts",
   "main": "dist/bootpay.js",
