--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bootpay/backend-js",
-  "version": "2.1.10",
+  "version": "2.1.11",
   "description": "Bootpay Server Side Package for Node.js",
   "types": "dist/bootpay.d.ts",
   "main": "dist/bootpay.js",
@@ -18,12 +18,12 @@
     "clear": "tsc --build --clean"
   },
   "dependencies": {
-    "axios": "^1.6.2"
+    "axios": "^1.6.7"
   },
   "devDependencies": {
+    "@types/node": "^18.6.2",
     "ts-node": "^10.7.0",
-    "typescript": "^5.3.3",
-    "@types/node": "^18.6.2"
+    "typescript": "^5.3.3"
   },
   "repository": {
     "type": "git",
